--- a/CapsLockIndicatorV3/CapsLockIndicatorV3.csproj
+++ b/CapsLockIndicatorV3/CapsLockIndicatorV3.csproj
@@ -181,6 +181,7 @@
     <EmbeddedResource Include="strings.es.resx" />
     <EmbeddedResource Include="strings.fr.resx" />
     <EmbeddedResource Include="strings.it.resx" />
+    <EmbeddedResource Include="strings.nl.resx" />
     <EmbeddedResource Include="strings.pt-PT.resx" />
     <EmbeddedResource Include="strings.resx">
       <Generator>ResXFileCodeGenerator</Generator>
